--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-A chatbot for Telegram. Yes, that's it.
+# ToDo-Fy Chatbot for Telegram
+Ever feel the need for someone to store all your tasks for the day and remind you to complete them all without leaving your chat application?
+ToDoFy can do all that for you. Just install the Flask script on a server and the program does the rest for you.
+
+# Dependencies
+1. Python - https://www.python.org/downloads/
+2. Python Pip - https://docs.python.org/3/installing/
+2. Flask - pip install flask
+
+# Setting up The Server
+You'll need to have Apache Web Server installed on the server before you can set up the Flask app on it. 
+      https://httpd.apache.org/download.cgi
+Telegram requires the web server to have a domain name and have SSL certificates. More on that here:
+      Free domain names - http://www.dot.tk/en/index.html?lang=en
+       Free SSL certificates - https://letsencrypt.org/
